--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
             <h3 class="homebarh3">خوش آمدید به سایت ایپسوم</h3>
         </div>
         <div class="homebar2">
-            <a href="http://127.0.0.1:5500/product/index.html">
+            <a href="./product/index.html">
                 <section class="categories">
-                    <a href="http://127.0.0.1:5500/product/index.html">
+                    <a href="./product/index.html">
                         <div class="category">لامپ LED</div>
                     </a>
-                    <a href="http://127.0.0.1:5500/product/index.html">
+                    <a href="./product/index.html">
                         <div class="category">لامپ تست</div>
                     </a>
-                    <a href="http://127.0.0.1:5500/product/index.html">
+                    <a href="./product/index.html">
                         <div class="category">ابزار برق‌کاری</div>
                     </a>
-                    <a href="http://127.0.0.1:5500/product/index.html">
+                    <a href="./product/index.html">
                         <div class="category">سوئیچ و پریز</div>
                     </a>
-                    <a href="http://127.0.0.1:5500/product/index.html">
+                    <a href="./product/index.html">
                         <div class="category">کابل و سیم</div>
                     </a>
                 </section>
