--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <div class="container">
         <div class="bu-box">
             <h2>به ما اطمینان کنید!</h2>
+         <a href="malto:soroushkarmin@gmail.com">ارتباط باایمیل</a>
         </div>
     </div>
     <footer>
