--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     <div class="container">
         <div class="bu-box">
             <h2>به ما اطمینان کنید!</h2>
-         <a href="malto:soroushkarmin@gmail.com">ارتباط باایمیل</a>
+            <button type="send">ارسال</button>
+              <input type="email" name="..."><br>
         </div>
     </div>
     <footer>
